[package]
name = "cbc-src"
version = "0.2.1+2.10.8"
edition = "2021"
build = "build.rs"
links = "Cbc"
license = "Apache-2.0"
documentation = "https://docs.rs/cbc-src/"
description = "The low-level bindings to the COIN-OR Cbc library."
repository = "https://github.com/Maroon502/cbc-src.git"
keywords = ["coin-or", "Cbc", "Cbc-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Cbc/**/*",
    "!Cbc/Cbc/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["osicbc", "cbcsolver"]
cbcsolver = []
osicbc = []
parallel = []


[dependencies]
coinutils-src = "0.2"
osi-src = "0.2"
clp-src = { version = "0.2", default-features = false, features = ["osiclp"] }
cgl-src = "0.2"


[build-dependencies]
cc = "1.0"
coin-build-tools = "0.2"
bindgen = "0.64"