[package]
name = "cbc-src"
version = "0.2.5+2.10.11"
edition = "2021"
build = "build.rs"
links = "Cbc"
license = "Apache-2.0"
documentation = "https://docs.rs/cbc-src/"
description = "Redistribution of Coin-OR Cbc as a crate"
repository = "https://github.com/Maroon502/cbc-src.git"
keywords = ["coin-or", "Cbc", "Cbc-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Cbc/**/*",
    "!Cbc/Cbc/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["osicbc"]
cbcsolver = []
osicbc = []
parallel = []


[dependencies]
coinutils-src = "0.2"
osi-src = "0.2"
clp-src = { version = "0.2", default-features = false, features = ["osiclp"] }
cgl-src = "0.2"


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
coin-build-tools = "0.2"
